{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 15,
  "lineage": "c233c915-6aaf-4493-e150-681ed9fddac4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "exam-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aaa5410833273cfe",
            "arn": "arn:aws:ec2:eu-west-2:801979641740:instance/i-0475bee0476fcd41c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0475bee0476fcd41c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "root-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0102daf69740e5d",
            "private_dns": "ip-10-0-1-213.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-13-40-154-191.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.154.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fc8fcdfecf4d35c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-059de724a9e8621a5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcf02ff56cf0648b",
            "tags": {
              "Name": "exam-server-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "exam-server-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059de724a9e8621a5"
            ]
          },
          "dependencies": [
            "aws_security_group.exam-security-grp-rule",
            "aws_subnet.exam-public-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exam_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:internet-gateway/igw-035c7e9695d1ccd8c",
            "id": "igw-035c7e9695d1ccd8c",
            "owner_id": "801979641740",
            "tags": {
              "Name": "exam_internet_gateway"
            },
            "tags_all": {
              "Name": "exam_internet_gateway"
            },
            "vpc_id": "vpc-0020daf1eaed6c999"
          },
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "exam-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:network-acl/acl-01e29e61544812689",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01e29e61544812689",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "801979641740",
            "subnet_ids": [
              "subnet-0e7e710927c661e86",
              "subnet-0fcf02ff56cf0648b"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0020daf1eaed6c999"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.exam-public-subnet1",
            "aws_subnet.exam-public-subnet2",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "exam-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:route-table/rtb-0c69b41377f8260a1",
            "id": "rtb-0c69b41377f8260a1",
            "owner_id": "801979641740",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035c7e9695d1ccd8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exam-route-table-public"
            },
            "tags_all": {
              "Name": "exam-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020daf1eaed6c999"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.exam_internet_gateway",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "exam-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f178fe5f51b27729",
            "route_table_id": "rtb-0c69b41377f8260a1",
            "subnet_id": "subnet-0fcf02ff56cf0648b"
          },
          "dependencies": [
            "aws_internet_gateway.exam_internet_gateway",
            "aws_route_table.exam-route-table-public",
            "aws_subnet.exam-public-subnet1",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "exam-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75f71cfe31165af",
            "route_table_id": "rtb-0c69b41377f8260a1",
            "subnet_id": "subnet-0e7e710927c661e86"
          },
          "dependencies": [
            "aws_internet_gateway.exam_internet_gateway",
            "aws_route_table.exam-route-table-public",
            "aws_subnet.exam-public-subnet2",
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "exam-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:security-group/sg-059de724a9e8621a5",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059de724a9e8621a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "801979641740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "exam-security-grp-rule"
            },
            "tags_all": {
              "Name": "exam-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020daf1eaed6c999"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exam-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:subnet/subnet-0fcf02ff56cf0648b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcf02ff56cf0648b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801979641740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exam-public-subnet1"
            },
            "tags_all": {
              "Name": "exam-public-subnet1"
            },
            "vpc_id": "vpc-0020daf1eaed6c999"
          },
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exam-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:subnet/subnet-0e7e710927c661e86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e710927c661e86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801979641740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exam-public-subnet2"
            },
            "tags_all": {
              "Name": "exam-public-subnet2"
            },
            "vpc_id": "vpc-0020daf1eaed6c999"
          },
          "dependencies": [
            "aws_vpc.exam_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exam_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:801979641740:vpc/vpc-0020daf1eaed6c999",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b503e1feec3a838",
            "default_route_table_id": "rtb-0b8cc14b0ae0dd31a",
            "default_security_group_id": "sg-0a1ad6f3a3c192df3",
            "dhcp_options_id": "dopt-0e3e6ebcbc10f848b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0020daf1eaed6c999",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8cc14b0ae0dd31a",
            "owner_id": "801979641740",
            "tags": {
              "Name": "exam_vpc"
            },
            "tags_all": {
              "Name": "exam_vpc"
            }
          }
        }
      ]
    }
  ]
}